--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Portfolio</title>
 
     <!-- box icons -->
-
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- custom css -->
-
+    <link rel="stylesheet" href="style.css">
     <!-- custom js -->
-<link rel="stylesheet" href="style.css">
+<script src="script.js" defer></script>
 
 </head>
 <body>
@@ -19,8 +19,10 @@
     <header class="header">
         <a href="#" class="logo">Portfolio</a>
 
+        <i class='bx bx-menu' id="menu-icon"></i>
+
         <nav class="navbar">
-            <a href="#home">Home</a>
+            <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
             <a href="#portfolio">Portfolio</a>
@@ -28,8 +30,15 @@
         </nav>
     </header>
     
-
-
+    <!-- home section desing -->
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's Me</h3>
+            <h1>Anderson Souza</h1>
+            <h3>And I'm a <span>Front-End Developer</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi odio ut sed error voluptate, ullam tempora!</p>
+        </div>
+    </section>
     
 </body>
 </html>
