--- a/index.html
+++ b/index.html
@@ -1,44 +1,69 @@
 <!DOCTYPE html>
 <html lang="br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
 
     <!-- box icons -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <!-- custom css -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!-- custom js -->
-<script src="script.js" defer></script>
-
-</head>
-<body>
+    <script src="script.js" defer></script>
+  </head>
+  <body>
     <!-- header design -->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">Portfolio</a>
 
-        <i class='bx bx-menu' id="menu-icon"></i>
+      <i class="bx bx-menu" id="menu-icon"></i>
 
-        <nav class="navbar">
-            <a href="#home" class="active">Home</a>
-            <a href="#about">About</a>
-            <a href="#services">Services</a>
-            <a href="#portfolio">Portfolio</a>
-            <a href="#contact">Contact</a>
-        </nav>
+      <nav class="navbar">
+        <a href="#home" class="active">Home</a>
+        <a href="#about">About</a>
+        <a href="#services">Services</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </header>
-    
+
     <!-- home section desing -->
     <section class="home" id="home">
-        <div class="home-content">
-            <h3>Hello, It's Me</h3>
-            <h1>Anderson Souza</h1>
-            <h3>And I'm a <span>Front-End Developer</span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates excepturi odio ut sed error voluptate, ullam tempora!</p>
+      <div class="home-content">
+        <h3>Hello, It's Me</h3>
+        <h1>Anderson Souza</h1>
+        <h3>And I'm a <span>Front-End Developer</span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
+          aliquam, modi aspernatur placeat architecto amet laudantim id.
+        </p>
+        <div class="social-media">
+          <a href="#"><i class='bx bxl-facebook'></i></a>
+          <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+          <a href="#"><i class='bx bxl-linkedin' ></i></a>
+          <a href="#"><i class='bx bxl-gmail' ></i></a>
         </div>
+        <a href="#" class="btn">Download CV</a>
+      </div>
+      <div class="home-img">
+        <img src="assets/img/home.png" alt="">
+      </div>
     </section>
-    
-</body>
+    <!--about section design-->
+    <section class="about" id="about">
+      <div class="about-img">
+        <img src="assets/img/about.png" alt="">
+      </div>
+      <div class="about-content">
+        <h2 class="heading">About <span>Me</span></h2>
+        <h3>Front-End Developer</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore officia asperiores labore officiis suscipit ex at non impedit nostrum animi illum mollitia itaque reprehenderit laudantium molestiae eum porro molestias repudiandae, amet ea eos alias corporis laborum nobis. Tempore deserunt repellendus quos nihil voluptas aut est suscipit.</p>
+      </div>
+    </section>
+  </body>
 </html>
